--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayaz ARMUTLU</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="container">
+
+    <nav class="navbar">
         <ul>
-            <li id="mainm">Site Hazırlanma Aşamasında</li>
+            <li><a href="#">Anasayfa</a></li>
+            <li><a href="https://github.com/ayazarm" target="_blank">Github</a></li>
+            <li><a href="https://www.instagram.com/ayazarm/" target="_blank">Instagram</a></li>
         </ul>
-    </div>
+    </nav>
+
+
+    
+        <section>
+        <p id="mainp">
+            Ben Ayaz 2006 da İstanbul/Kartalda Doğdum Şuan Hacı Hatice Bayraktar Anadolu
+            Lisesinde
+            10.sınıf öğrencisiyim.<br>
+            Bu siteye ise kendi yaptıklarımı ekleyeceğim.
+            Hedefim Önce iyi bir backend geliştirici ardından ise fena olmayan bir fullstack web developer olmak.<br>
+            Bunun için ise gün ve gün kendimi Geliştirmeye Çalışıyorum.
+        </p>
+    </section>    
+
+
 
 
 </body>
+
 </html>
