--- a/index.html
+++ b/index.html
@@ -87,12 +87,8 @@ a:hover {
     
         <section>
         <p id="mainp">
-            Ben Ayaz 2006 da İstanbul/Kartalda Doğdum Şuan Hacı Hatice Bayraktar Anadolu
-            Lisesinde
-            10.sınıf öğrencisiyim.<br>
-            Bu siteye ise kendi yaptıklarımı ekleyeceğim.
-            Hedefim Önce iyi bir backend geliştirici ardından ise fena olmayan bir fullstack web developer olmak.<br>
-            Bunun için ise gün ve gün kendimi Geliştirmeye Çalışıyorum.
+            Ben Ayaz 2006 İstanbul/Kartal Doğumluyum. Şuan Hacı Hatice Bayraktar Andolu Lisesinde 10.sınıf öğrencisiyim. Şu sıralar web development ve backend ile ilgileniyorum.
+            İlerideki Hedefim iyi bir backendci veya full stacki olup iyi bir kariyer yapmak. Bu Siteyi Açma amacım ise kendi yaptığım şeyleri paylaşmak ve kendi gelişimimi gözlemlemek.
         </p>
     </section>    
 
