--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a:hover {
         <section>
         <p id="mainp">
             Ben Ayaz 2006 İstanbul/Kartal Doğumluyum. Şuan Hacı Hatice Bayraktar Andolu Lisesinde 10.sınıf öğrencisiyim. Şu sıralar web development ve backend ile ilgileniyorum.
-            İlerideki Hedefim iyi bir backendci veya full stacki olup iyi bir kariyer yapmak. Bu Siteyi Açma amacım ise kendi yaptığım şeyleri paylaşmak ve kendi gelişimimi gözlemlemek.
+            İlerideki Hedefim iyi bir backendci veya full stackci olup iyi bir kariyer yapmak. Bu Siteyi Açma amacım ise kendi yaptığım şeyleri paylaşmak ve kendi gelişimimi gözlemlemek.
         </p>
     </section>    
 
