--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 </head>
 
 <body>
+    <nav class="nvbr">
+        <ul>
+            <li><a href="#" id="mv1" target="_blank">Anasayfa</a></li>
+            <li><a href="https://github.com/ayazarm" target="_blank">Github</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+            <li class="llive">Ayaz.live</li>
+        </ul>
+    </nav>
     <section>
-        <div class="borderbox">
-            Site Yapım Asamasında
+        <div class="box1">
+            <h1>Ben Kimim ?</h1>
+            <p>Ben Ayaz 2006 İstanbul/Kartal Doğumluyum bu siteyi kendim için yaptım.Şu anda Hacı Hatice bayraktar
+                Anadolu lisesinde 10.sınıf öğrencisiyim.Yazılımda ise artık data science ile ilgilenmeye başladım bu
+                yüzden python fundamentallerimi daha iyi hale getirmeye çalışıyorum şuanlık durum böyle.</p>
         </div>
     </section>
-
-    </div>
 </body>
 
 </html>
