--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav class="nvbr">
         <ul>
-            <li><a href="#" id="mv1" target="_blank">Anasayfa</a></li>
+            <li><a href="index.html" id="mv1" target="_blank">Anasayfa</a></li>
             <li><a href="https://github.com/ayazarm" target="_blank">Github</a></li>
-            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+            <li><a href="https://www.instagram.com/ayazarm/" target="_blank">Instagram</a></li>
             <li class="llive">Ayaz.live</li>
         </ul>
     </nav>
