--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav class="navbar">
         <ul>
             <li><a href="#">Anasayfa</a></li>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Instagram</a></li>
+            <li><a href="https://github.com/ayazarm">Github</a></li>
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
         </ul>
     </nav>
    
