--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="#">Anasayfa</a></li>
             <li><a href="https://github.com/ayazarm">Github</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
+            <li><a href="https://www.instagram.com/ayazarm/">Instagram</a></li>
         </ul>
     </nav>
    
