--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="#">Anasayfa</a></li>
-            <li><a href="https://github.com/ayazarm">Github</a></li>
-            <li><a href="https://www.instagram.com/ayazarm/">Instagram</a></li>
+            <li><a href="#"  target="_blank>Anasayfa</a></li>
+            <li><a href="https://github.com/ayazarm"  target="_blank>Github</a></li>
+            <li><a href="https://www.instagram.com/ayazarm/"  target="_blank>Instagram</a></li>
         </ul>
     </nav>
    
